<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />

        <variable
            name="viewModel"
            type="com.udacity.shoestore.screens.ListAndDetailViewModel" />
    </data>

    <!-- LinearLayout to dispose all the
         views vertically, one after the other.  -->
<LinearLayout android:id="@+id/details_container_inputFields"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/form_top_margin"
    android:orientation="vertical"
    android:paddingLeft="@dimen/fields_container_padding"
    android:paddingRight="@dimen/fields_container_padding"
    android:paddingBottom="@dimen/form_top_margin"
    tools:context="screens.details.DetailsFragment">

    <!-- Name category -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameOutlinedTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_shoe_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_shoe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={shoe.name}"/>

        <!-- How can we make...
             Always there to make noise, I can't escape from it-->

        <!-- Find an app with an edit  -->
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Company category -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/CompanyOutlinedTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/details_fragment_spacing"
        android:hint="@string/hint_company_name">

        <!-- Company field-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={shoe.company}"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Size category -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/SizeOutlinedTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/details_fragment_spacing"
        android:hint="@string/hint_shoe_size">

        <!-- Size field android:inputType="numberDecimal"
          Note : because of the conversion from Double to
          String, we can't use two-way binding here-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_shoe_size"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{Double.toString(shoe.size)}"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Description category -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/DescriptionOutlinedTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/details_fragment_spacing"
        android:hint="@string/hint_shoe_description">

        <!-- Description field-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_shoe_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={shoe.description}"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text" />

</LinearLayout>
</layout>