<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- I used this layout because I wanted to align
         the different fields vertically. I can easly do that
          with LinearLayout, just by defining the "orientation"
          as vertical -->
    <LinearLayout android:id="@+id/details_container_inputFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_top_margin"
        android:orientation="vertical"
        android:paddingLeft="@dimen/fields_container_padding"
        android:paddingRight="@dimen/fields_container_padding"
        android:paddingBottom="@dimen/form_top_margin"
        tools:context=".DetailsFragment"
        style="@style/AppTheme.NoActionBar">

    <!-- Username category -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameOutlinedTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password category -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PasswordOutlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_fragment_spacing"
            android:hint="@string/hint_password">

            <!-- Password field-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/details_fragment_spacing"
                android:text="@string/login_button_text" />

        </LinearLayout>
    </LinearLayout>

</layout>